// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/mentions/demo/async.vue correctly 1`] = `
"<div data-v-bd6aa610="" class="xy-mentions css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" rows="1" value=""></textarea>
  <!---->
</div>"
`;

exports[`renders ./src/mentions/demo/basic.vue correctly 1`] = `
"<div class="xy-mentions css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" autofocus="" rows="1" value="@afc163"></textarea>
  <!---->
</div>"
`;

exports[`renders ./src/mentions/demo/form.vue correctly 1`] = `
"<form class="xy-form xy-form-horizontal css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-form-item css-dev-only-do-not-override-1p3hq3p">
    <div class="xy-form-item-row xy-row xy-form-item-row css-dev-only-do-not-override-1p3hq3p">
      <div class="xy-form-item-label xy-col xy-col-6 xy-form-item-label css-dev-only-do-not-override-1p3hq3p"><label for="form_item_coders" class="xy-form-item-required" title="Top coders">Top coders</label></div>
      <div class="xy-form-item-control xy-col xy-col-18 xy-form-item-control css-dev-only-do-not-override-1p3hq3p">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content">
            <div class="xy-mentions css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" rows="1" id="form_item_coders" value=""></textarea>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item css-dev-only-do-not-override-1p3hq3p">
    <div class="xy-form-item-row xy-row xy-form-item-row css-dev-only-do-not-override-1p3hq3p">
      <div class="xy-form-item-label xy-col xy-col-6 xy-form-item-label css-dev-only-do-not-override-1p3hq3p"><label for="form_item_bio" class="xy-form-item-required" title="Bio">Bio</label></div>
      <div class="xy-form-item-control xy-col xy-col-18 xy-form-item-control css-dev-only-do-not-override-1p3hq3p">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content">
            <div class="xy-mentions css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" rows="3" placeholder="You can use @ to ref user here" id="form_item_bio" value=""></textarea>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item css-dev-only-do-not-override-1p3hq3p">
    <div class="xy-form-item-row xy-row xy-form-item-row css-dev-only-do-not-override-1p3hq3p">
      <!---->
      <div class="xy-form-item-control xy-col xy-col-12 xy-col-offset-5 xy-form-item-control css-dev-only-do-not-override-1p3hq3p">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Submit</span></button><button style="margin-left: 8px;" class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>Reset</span></button></div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
</form>"
`;

exports[`renders ./src/mentions/demo/placement.vue correctly 1`] = `
"<div class="xy-mentions css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" rows="1" value=""></textarea>
  <!---->
</div>"
`;

exports[`renders ./src/mentions/demo/prefix.vue correctly 1`] = `
"<div class="xy-mentions css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" rows="1" placeholder="input @ to mention people, # to mention tag" value=""></textarea>
  <!---->
</div>"
`;

exports[`renders ./src/mentions/demo/readonly.vue correctly 1`] = `
"<div>
  <div style="margin-bottom: 10px;">
    <div class="xy-mentions xy-mentions-disabled css-dev-only-do-not-override-1p3hq3p"><textarea disabled="" dropdownclassname="css-dev-only-do-not-override-1p3hq3p" rows="1" placeholder="this is disabled Mentions" value=""></textarea>
      <!---->
    </div>
  </div>
  <div class="xy-mentions css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" rows="1" placeholder="this is readOnly a-mentions" readonly="" value=""></textarea>
    <!---->
  </div>
</div>"
`;

exports[`renders ./src/mentions/demo/status.vue correctly 1`] = `
"<div class="xy-space css-dev-only-do-not-override-1p3hq3p xy-space-vertical">
  <div class="xy-space-item" style="margin-bottom: 8px;">
    <div class="xy-mentions xy-mentions-status-error css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" autofocus="" rows="1" status="error" value="@afc163"></textarea>
      <!---->
    </div>
  </div>
  <!---->
  <div class="xy-space-item">
    <div class="xy-mentions xy-mentions-status-warning css-dev-only-do-not-override-1p3hq3p"><textarea dropdownclassname="css-dev-only-do-not-override-1p3hq3p" autofocus="" rows="1" status="warning" value="@afc163"></textarea>
      <!---->
    </div>
  </div>
  <!---->
</div>"
`;
